# rp2040-run-from-ram-rs

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
